Breadcrumb causing spacing issues

--- a/woocommerce/storefront.css
+++ b/woocommerce/storefront.css
@@ -17,6 +17,7 @@
 }
 .woocommerce-breadcrumb {
   text-align: right;
+  margin-bottom:0 !important
 }
 .content-area {
   margin-top:-110px
